Add a flag to disable server experiments in DRP

Use this flag to disable server experiments field trial when
running Lo-Fi integration tests.

BUG=619622

Review-Url: https://codereview.chromium.org/2062963003
Cr-Commit-Position: refs/heads/master@{#399592}

Former-commit-id: c55229da0bb74bc1a1abee81fd248fe1843448d1